--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "com.metrological.app.VEVO",
-  "scripts": {
-    "build": "npm explore wpe-lightning-sdk -- npm --baseDir=$(pwd) run build",
-    "start": "npm explore wpe-lightning-sdk -- npm --baseDir=$(pwd) run start",
-    "release": "npm explore wpe-lightning-sdk -- npm --baseDir=$(pwd) run release",
-    "dev": "npm explore wpe-lightning-sdk -- npm --baseDir=$(pwd) run dev",
-    "upload": "npm explore wpe-lightning-sdk -- npm --baseDir=$(pwd) run upload"
-  },
+  "name": "com.metrological.app.TicTacToe",
+  "description": "TicTacToe",
   "dependencies": {
-    "wpe-lightning-sdk": "git+https://github.com/WebPlatformForEmbedded/Lightning-SDK.git#next"
+    "wpe-lightning-sdk": "WebPlatformForEmbedded/Lightning-SDK"
   }
 }
